samples/_failures_safe/1761256286_18447d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_606e7d1f.c: In function ‘main’:
./samples/SAFE/__tmp_606e7d1f.c:135:38: error: ‘rows’ undeclared (first use in this function); did you mean ‘rows_b’?
  135 |     int **matrix_b = allocate_matrix(rows
      |                                      ^~~~
      |                                      rows_b
./samples/SAFE/__tmp_606e7d1f.c:135:38: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_606e7d1f.c:135:42: error: expected ‘)’ at end of input
  135 |     int **matrix_b = allocate_matrix(rows
      |                                     ~    ^
      |                                          )
./samples/SAFE/__tmp_606e7d1f.c:135:22: error: too few arguments to function ‘allocate_matrix’
  135 |     int **matrix_b = allocate_matrix(rows
      |                      ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_606e7d1f.c:25:7: note: declared here
   25 | int **allocate_matrix(int rows, int cols) {
      |       ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_606e7d1f.c:135:5: error: expected declaration or statement at end of input
  135 |     int **matrix_b = allocate_matrix(rows
      |     ^~~
